apps/index-api/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: index-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
